--- a/app/globals.css
+++ b/app/globals.css
@@ -23,6 +23,7 @@
 
 
 html, body {
+  cursor: none;
   overflow:hidden;
 }
 
@@ -38,25 +39,32 @@ html, body {
   @apply shadow-[0_0_0_8px_rgba(149_174_175_/_0.3)];
 }
 
+.cursor{
+  position: fixed;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  border: solid whitesmoke 2px;
+  background-color: transparent;
+  box-shadow: 0px 0px 2px 2px  black;
+  z-index: 9999;
+  pointer-events: none;
+  
+
+
+}
+
 .fallen-scooter{
   position: relative;
   height: 100vh;
-
-
-
-
 }
 .kid-on-scooter{
   position: relative;
   height: 100vh;
-
-
 }
 .scooter-hub{
   position: relative;
   height: 100vh;
-
-
 }
 
 .content{
@@ -84,6 +92,7 @@ html, body {
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: 0px 5px 15px 2px rgba(255,255,255, 0.3);
 }
+
 .img-txt{
   position: relative;
   justify-content: left;
@@ -106,9 +115,8 @@ html, body {
 
 
 .button {
-  cursor: pointer;
   border: none;
-  z-index: 9999;
+  z-index: 9998;
   height: 2.5em;
   width: 8em;
   color: var(--greenv);
@@ -125,6 +133,7 @@ html, body {
     inset 0.3em 0.3em 0 0 var(--greenv);
 }
 .button:hover {
+  cursor: none;
   transform: scale(0.95);
   color: var(--whitev);
   box-shadow: 
